--- a/lista_compras/pubspec.yaml
+++ b/lista_compras/pubspec.yaml
@@ -35,8 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.3.4
   firebase_core: ^3.8.1
   cloud_firestore: ^5.5.1
+
+  encrypt: ^5.0.0
 
 dev_dependencies:
   flutter_test:
